--- a/web/resources/spatial/spatial.css
+++ b/web/resources/spatial/spatial.css
@@ -4,3 +4,25 @@ html, body, #viewDiv {
     height: 100%;
     width: 100%;
 }
+
+#panel{
+    position: absolute;
+    width: 320px;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    left: 0;
+    top: 0;
+}
+
+#searchArea {
+    width: 100%;
+    display: inline-block;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: white;
+}
+
+#searchField {
+    width: 70%;
+    margin: 2.75%;
+}
