--- a/web/resources/spatial/spatial.css
+++ b/web/resources/spatial/spatial.css
@@ -28,5 +28,13 @@ html, body, #viewDiv {
 }
 
 button {
-    margin: 3% 1.5% 1.5% 3%;
+    margin: 3% 1% 2% 3%;
+}
+
+.agencyBtn {
+    background-color: aquamarine;
+}
+
+.airportBtn {
+    background-color: yellow;
 }
