--- a/web/resources/spatial/spatial.css
+++ b/web/resources/spatial/spatial.css
@@ -7,7 +7,7 @@ html, body, #viewDiv {
 
 #panel{
     position: absolute;
-    width: 320px;
+    width: 400px;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
     left: 0;
@@ -27,8 +27,15 @@ html, body, #viewDiv {
     margin: 2.5% 2% 2.5% 3.5%;
 }
 
+#controls {
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: white;
+    padding-bottom: 1%;
+}
+
 button {
-    margin: 3% 1% 2% 3%;
+    margin: 3% 2.5% 2% 3.5%;
 }
 
 .agencyBtn {
@@ -37,4 +44,23 @@ button {
 
 .airportBtn {
     background-color: yellow;
+}
+
+#selected, #graph, #distance {
+    padding: 0.5%;
+    visibility: hidden;
+}
+
+#selected {
+    max-height: 20%;
+    overflow: auto;
+}
+
+#graph {
+    margin: auto;
+    width: 80%;
+}
+
+body {
+    color:white;
 }
